# Formal2021

./: Automaton.hpp  CMakeLists.txt  README.md  main.cpp
doc/: hw5.md
etc/NFA_test/: example1.in  example1DFA.in  example1NFA.in  example2.in  example2NFA.in  example3.in  example3DFA.in  example4.in  example4DFA.in  example4NFA.in
include/: Automaton.hpp  common.hpp  earley.hpp  regex.hpp
py/: LR.py  LR_1.py  common_lr.py
src/: eNFAtoDFA.cpp  hw5.cpp
src/Earley/: earley.cpp
test/: eNFAtoDFA.cpp  earley.cpp  hw5.cpp
